--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "@project-serum/anchor": "^0.26.0",
+    "@coral-xyz/anchor": "^0.28.0",
     "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "^1.92.0",
     "chalk": "^5.3.0",
